--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  background-size: 100%;
+  background-image: url("src/assets/background.jpeg");
+  height: 1000px;
+}
