--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,73 +1,86 @@
 <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-light py-3">
-      <div class="container">
-        <a routerLink="/" class="navbar-brand">
-          <h1><img src="../assets/video.svg" width="100" height="100" alt="Video Store">
-            Video Store</h1>
-        </a>
-      </div>
-    </nav>
-  </header>
-  
-  <div class="container">
-    <div class="row align-items-center">
-      <!-- For Demo Purpose -->
-      <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
-          <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-            </div>
-      </div>
-  
-      <!-- Registeration Form -->
-      <div class="col-md-7 col-lg-6 ml-auto">
-        <form action="#">
-          <div class="row">
-  
+  <nav class="navbar navbar-expand-lg navbar-light py-3">
+    <div class="container">
+      <a routerLink="/" class="navbar-brand">
+        <h1>
+          <img
+            src="../assets/video.svg"
+            width="100"
+            height="100"
+            alt="Video Store"
+          />
+          Video Store
+        </h1>
+      </a>
+    </div>
+  </nav>
+</header>
 
-            <!-- Email Address -->
-            <div class="input-group col-lg-12 mb-4">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text bg-white px-4 border-md border-right-0"
-                  >
-                    <i class="fa fa-envelope text-muted"></i>
-                  </span>
-                </div>
-                <input
-                  id="email"
-                  type="email"
-                  name="email"
-                  placeholder="Email Address"
-                  class="form-control bg-white border-left-0 border-md"
-                />
-              </div>
+<div class="container">
+  <div class="row align-items-center">
+    <!-- For Demo Purpose -->
+    <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/qXgF-iJ_ezE?start=21"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
 
-            <!-- Password -->
-            <div class="input-group col-lg-12 mb-4">
-              <div class="input-group-prepend">
-                <span
-                  class="input-group-text bg-white px-4 border-md border-right-0"
-                >
-                  <i class="fa fa-lock text-muted"></i>
-                </span>
-              </div>
-              <input
-                id="password"
-                type="password"
-                name="password"
-                placeholder="Password"
-                class="form-control bg-white border-left-0 border-md"
-              />
+    <!-- Registeration Form -->
+    <div class="col-md-7 col-lg-6 ml-auto">
+      <form action="#">
+        <div class="row">
+          <!-- Email Address -->
+          <div class="input-group col-lg-12 mb-4">
+            <div class="input-group-prepend">
+              <span
+                class="input-group-text bg-white px-4 border-md border-right-0"
+              >
+                <i class="fa fa-envelope text-muted"></i>
+              </span>
             </div>
-  
-            <!-- Submit Button -->
-            <div class="form-group col-lg-12 mx-auto mb-0">
-              <a routerLink="/" class="btn btn-primary btn-block py-2">
-                <span class="font-weight-bold">Login</span>
-              </a>
+            <input
+              id="email"
+              type="email"
+              name="email"
+              placeholder="Email Address"
+              class="form-control bg-white border-left-0 border-md"
+            />
+          </div>
+
+          <!-- Password -->
+          <div class="input-group col-lg-12 mb-4">
+            <div class="input-group-prepend">
+              <span
+                class="input-group-text bg-white px-4 border-md border-right-0"
+              >
+                <i class="fa fa-lock text-muted"></i>
+              </span>
             </div>
-  
-            <!-- Social Login
+            <input
+              id="password"
+              type="password"
+              name="password"
+              placeholder="Password"
+              class="form-control bg-white border-left-0 border-md"
+            />
+          </div>
+
+          <!-- Submit Button -->
+          <div class="form-group col-lg-12 mx-auto mb-0">
+            <a routerLink="/" class="btn btn-primary btn-block py-2">
+              <span class="font-weight-bold">Login</span>
+            </a>
+          </div>
+
+          <!-- Social Login
             <div class="form-group col-lg-12 mx-auto">
               <a href="#" class="btn btn-primary btn-block py-2 btn-facebook">
                 <i class="fa fa-facebook-f mr-2"></i>
@@ -78,10 +91,8 @@
                 <span class="font-weight-bold">Continue with Twitter</span>
               </a>
             </div> -->
-
-          </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
