--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body{
   background-size: 100%;
-  background-image: url("src/assets/background.jpeg");
+  /* background-image: url("src/assets/background.jpeg"); */
   height: 1000px;
 }
